# ASR-pronunciation-correction

./: .vercelignore  README.md  vercel.json
.github/workflows/: deploy.yml
analysis/: CV_cook.ipynb  L2ARCTIC_cook.ipynb  combo.ipynb  finetune_wav2vec2.ipynb  librispeech_cook.ipynb  ljspeech_cook.ipynb  timit_preparations_v1.ipynb
api/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  rebuild_container.ps1  rebuild_container.sh  requirements.txt
api/src/pronunciation_api/: WordMatching.py  api.py  config.py  get_sample.py  index.py  new_index.py  phoneme_converter.py  speech_to_score.py  supabase_queries.py  transcribe.py  utils.py  word_matching.py  word_metrics.py
exp/: .pdm-python  README.md  pyproject.toml
exp/modal/: app.py
web-ui-nuxt/: .env.example  .gitignore  app.vue  drizzle.config.ts  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tailwind.config.ts  text_augmented.csv
web-ui-nuxt/api/: GetSample.py  PhonemeConverter.py  WordMatching.py  WordMetrics.py  config.py  get_sample.py  index.py  speech_to_score.py  supabase_queries.py  transcribe.py
web-ui-nuxt/components/: AudioRecorder.vue  LoadingSpinner.vue  PhonemeComparison.vue  TranscriptionDisplay.vue
web-ui-nuxt/components/exercise/: ExerciseContent.vue  ExerciseControls.vue  ExerciseHeader.vue  ProgressBar.vue
web-ui-nuxt/composables/: theme.ts  useApi.ts  useAudioRecorder.ts  useExerciseProgress.ts  useProgress.ts  useTranscriptionApi.ts
web-ui-nuxt/drizzle/: schema.ts  seedExercises.ts  seedSentences.ts
web-ui-nuxt/middleware/: auth.ts
web-ui-nuxt/pages/: callback.vue  dashboard.vue
web-ui-nuxt/pages/auth/: login.vue
web-ui-nuxt/pages/exercise/: [id].vue
web-ui-nuxt/server/api/: pronunciation-analysis.post.ts  transcribe_sentence.post.ts
web-ui-nuxt/services/: api.ts
web-ui-nuxt/src/components/: AppHeader.vue  AudioRecorder.vue  CompletedExercises.vue  ExerciseRatingModal.vue
web-ui-nuxt/src/drizzle/: index.ts  migrate.ts  schema.ts  seedExercises.ts  seedSentences.ts
web-ui-nuxt/src/layouts/: default.vue
web-ui-nuxt/src/middleware/: auth.ts
web-ui-nuxt/src/pages/: dashboard.vue  index.vue  login.vue  register.vue  tasks.vue
web-ui-nuxt/src/pages/auth/: login.vue  register.vue
web-ui-nuxt/src/pages/exercise/: [id].vue
web-ui-nuxt/src/server/routes/backend/: text_data.ts
web-ui-nuxt/src/types/: database.types.ts  text_data.d.ts
web-ui-nuxt/supabase/migrations/: 0000_absent_jasper_sitwell.sql  0000_swift_talos.sql  0004_quick_cliff.sql
web-ui-nuxt/supabase/migrations/meta/: 0000_snapshot.json  _journal.json
web-ui-nuxt/types/: api.ts  exercise.ts  progress.ts
web-ui-nuxt/utils/: audio.ts  audioProcessor.ts  audioRecorder.ts
web-ui-nuxt/utils/audio/: processor.ts  recorder.ts  support.ts  upload.ts
webui/: .gitignore  .pdm-python  AIModels.py  ModelInterfaces.py  RuleBasedModels.py  WordMatching.py  lambdaGetSample.py  lambdaSpeechToScore.py  lambdaTTS.py  models.py  mypy.ini  pronunciationTrainer.py  pyproject.toml  requirements.txt  unitTests.py  utils.py  utils_fmt.py  webApp.py
webui/static/css/: style-new.css
webui/static/javascript/: callbacks.js
webui/templates/: main.html
wiki/: .gitignore  quartz.config.ts  quartz.layout.ts
wiki/content/: PRAAT.md  Task.md  index.md  Датасеты.md  Подход Nick Mostert.md  Подход Голландца.md  Подход из ноутбука.md
wiki/content/Mu-Y (CHN)/: 0. index.md  1. related work.md
wiki/content/Mu-Y (китайцы)/: 0. index.md
wiki/content/PTS is all you need/: 0. PTS is all you need.md  1. Introduction.md  2. Work Work.md  3. Методы генерации ошибок произношения.md
