[project]
name = "phoneme_correction_modal"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Victor Khovanov", email = "victorkhovtko@gmail.com"},
]
dependencies = [
    "modal>=0.64.178",
    "pydantic>=2.9.2",
    "fastapi>=0.115.0",
    "transformers>=4.45.1",
    "phonemizer>=3.3.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.11.2",
    "ruff>=0.6.9",
    "ipython>=8.28.0",
    "jupyter>=1.1.1",
]
